--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,6 +9,8 @@
 
   --gray-100: #e1e1e6;
   --gray-300: #a8a8b3;
+  --gray-800: #29292e;
+  --gray-850: #1f2729;
   --gray-900: #121214;
 
   --cyan-500: #61dafb;
@@ -28,8 +30,7 @@
 }
 
 body {
-  background-color: #c4c4c4;
-  color: #000;
+  background-color: var(--gray-900);
 }
 
 body,
