--- a/src/components/SubscribeButton/styles.module.scss
+++ b/src/components/SubscribeButton/styles.module.scss
@@ -1,16 +1,19 @@
-.SubscribeButton {
-  height: 3rem;
-  border-radius: 3rem;
-  background-color: var(--yellow-500);
+.subscribeButton {
+  width: 260px;
+  height: 4rem;
+
   border: 0;
-  padding: 0 1.5rem;
+  border-radius: 2rem;
+
+  background-color: var(--yellow-500);
+  color: var(--gray-800);
+
+  font-size: 1.25rem;
+  font-weight: bold;
 
   display: flex;
   align-items: center;
   justify-content: center;
-
-  color: var(--white);
-  font-weight: bold;
 
   transition: filter 0.2s;
 
