--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,6 +1,6 @@
 .contentContainer {
   max-width: 1120px;
-  margin: 0;
+  margin: 0 auto;
   padding: 0 2rem;
   height: calc(100vh - 5rem);
 
@@ -37,5 +37,9 @@
       color: var(--cyan-500);
       font-weight: bold;
     }
+  }
+
+  button {
+    margin-top: 2.5rem;
   }
 }
